<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary">


    <TextView
        android:id="@+id/headingString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="20dp"/>


    <ImageView
        android:id="@+id/img"
        android:layout_width="234dp"
        android:layout_height="242dp"
        android:layout_below="@id/headingString"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="20dp"
        android:src="@drawable/icon" />

    <Button
        android:id="@+id/play"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:layout_marginVertical="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/img"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="#ffffff"
        />

    <Button
        android:id="@+id/solve"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/solve"
        android:layout_marginVertical="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/play"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="#ffffff"
         />

    <Button
        android:id="@+id/highscrore"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/highscore"
        android:layout_marginVertical="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/solve"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="#ffffff"
        />

    <Button
        android:id="@+id/howtoplay"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/howtoplay"
        android:layout_marginVertical="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/highscrore"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="#ffffff"
         />
    <ImageButton
        android:id="@+id/logout"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/logoutwhite"
        android:background="@null"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="30dp"
        android:scaleType="fitXY"

        />


</RelativeLayout>